@@ -101,6 +101,7 @@ AMANDA_SSL_SECURITY
 # Dumpers
 #
 AMANDA_PROG_REALPATH
+AMANDA_PROG_READLINK
 AMANDA_PROG_XFSDUMP_XFSRESTORE
 AMANDA_PROG_VXDUMP_VXRESTORE
 AMANDA_PROG_VDUMP_VRESTORE
